edlresume.com/iac/kubernetes-site/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edlresume-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: edlresume-project
  template:
    metadata:
      labels:
        app: edlresume-project
    spec:
      containers:
        - name: edlresume
          image: erickdalima/eldresume.com-k8s:v1
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: edlresume-project
  name: edlresume-project
spec:
  type: NodePort
  selector:
    app: edlresume-project
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
