edlresume.com/iac/kubernetes-site/manifests/test.yml
apiVersion: v1
kind: Service
metadata:
  name: my-application-service
  annotations:
    # Use these annotations for additional AWS load balancer configurations.
    # For an NLB:
    # service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    # For an ALB, using the AWS Load Balancer Controller:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    # service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 30080
  selector:
    app: edlresume-project
