edlresume.com/iac/kubernetes-site/manifests/test-ingress.yaml
apiVersion: v1
kind: Service
metadata:   
  name: edlresume-project
spec:   
  type: ClusterIP
  selector:     
    app: edlresume-project   
  ports:     
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edlresume-project-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: test.edlresume.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: edlresume-project
            port:
              number: 80
